openshift/helm/web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: robo-toolkit
  namespace: robotorium-idm
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: robo-toolkit-tls  
  labels:
    app: robo-toolkit
    service: robo-toolkit
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: robo-toolkit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robo-toolkit
  namespace: robotorium-idm
  labels:
    app: robo-toolkit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robo-toolkit
  template:
    metadata:
      labels:
        app: robo-toolkit
    spec:
      serviceAccountName: robo-toolkit
      containers:
      - name: oauth-proxy
        image: >-
            quay.io/openshift/origin-oauth-proxy:4.13
        args:
            - -provider=openshift
            - -https-address=
            - -http-address=:8888
            - -email-domain=*
            - -upstream=http://127.0.0.1:8080
            - -tls-cert=/etc/tls/private/tls.crt
            - -tls-key=/etc/tls/private/tls.key
            - -cookie-secret-file=/etc/proxy/secrets/session_secret
            - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
            - -openshift-service-account=robo-toolkit
            # - -skip-auth-regex=^/metrics
            # - -openshift-sar={"resource":"namespaces","resourceName":"robotorium-idm","namespace":"robotorium-idm","verb":"get"}
        ports:
            - name: oauth-proxy
              containerPort: 8888    
              protocol: TCP
        volumeMounts:
            - mountPath: /etc/tls/private
              name: secret-robo-toolkit-tls
            - mountPath: /etc/proxy/secrets
              name: robo-toolkit-proxy    

      - name: robo-toolkit
        ports:
            - name: http
              containerPort: 8080
              protocol: TCP
        image: 'huylinhnl/robo-toolkit:latest'
        imagePullPolicy: IfNotPresent
        volumeMounts:
            - name: appsettings-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json          
      volumes:
        - name: appsettings-volume
          configMap:
            name: appsettings-robo-toolkit
            items:
              - key: appsettings.json
                path: appsettings.json
            defaultMode: 420
        - name: robo-toolkit-proxy
          secret:
            secretName: robo-toolkit-proxy
            defaultMode: 420
        - name: secret-robo-toolkit-tls
          secret:
            secretName: robo-toolkit-tls
            defaultMode: 420

      imagePullSecrets:
        - name: artifactory-pullsecret
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: robo-toolkit
  namespace: robotorium-idm
spec:
  to:
    kind: Service
    name: robo-toolkit
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
